@@ -178,6 +178,7 @@ target_link_libraries(${BIN_ARANGODUMP}
   boost_system
   boost_boost
   arango_shell
+  fuerte
 )
 
 install(
@@ -358,6 +359,7 @@ target_link_libraries(${BIN_ARANGORESTORE}
   boost_system
   boost_boost
   arango_shell
+  fuerte
 )
 
 install(
