@@ -72,7 +72,7 @@ int main(int argc, char* argv[]) {
     server.addFeature<BasicFeaturePhaseClient>();
     server.addFeature<GreetingsFeaturePhase>(true);
 
-    server.addFeature<ClientFeature, HttpEndpointProvider>(false);
+    server.addFeature<ClientFeature, HttpEndpointProvider>(true);
     server.addFeature<ConfigFeature>("arangodump");
     server.addFeature<DumpFeature>(ret);
     server.addFeature<LoggerFeature>(false);
